# alphaess_modbus

./: .gitignore  Makefile  README.md  alphaess_registers.json  example-tcp.py  example.py  fastapi-example.py  pyproject.toml
.github/workflows/: publish-to-pypi.yml  publish-to-test-pypi.yml
alphaess_modbus/: __init__.py  formatter.py  reader.py  readertcp.py  registers.json
alphamodbus/: alphamodbus.py
